feat: enhance CreateOrEditEvent component with video fields, cast, and tags functionality fix: update date formatting in PostCommentsSection and VideoCommentsSection components add: new translations for cast and tags in Arabic locale

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -919,12 +919,96 @@
   "Sorry, the content you're looking for doesn't exist.": "عذراً، المحتوى الذي تبحث عنه غير موجود.",
   "Either it was removed, or you mistyped the link.": "قد يكون قد تمت إزالته أو أنك أدخلت رابطاً غير صحيح.",
   "Full Video": "فيديو كامل",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": ""
+  "Add cast member (press Enter)": "إضافة عضو في فريق العمل (اضغط Enter)",
+  "Afghanistan": "أفغانستان",
+  "Albania": "ألبانيا",
+  "Algeria": "الجزائر",
+  "Andorra": "أندورا",
+  "Angola": "أنغولا",
+  "Argentina": "الأرجنتين",
+  "Armenia": "أرمينيا",
+  "Australia": "أستراليا",
+  "Austria": "النمسا",
+  "Azerbaijan": "أذربيجان",
+  "Bahrain": "البحرين",
+  "Bangladesh": "بنغلاديش",
+  "Belarus": "بيلاروسيا",
+  "Belgium": "بلجيكا",
+  "Bosnia and Herzegovina": "البوسنة والهرسك",
+  "Brazil": "البرازيل",
+  "Bulgaria": "بلغاريا",
+  "Cambodia": "كمبوديا",
+  "Cameroon": "الكاميرون",
+  "Chile": "تشيلي",
+  "Colombia": "كولومبيا",
+  "Costa Rica": "كوستاريكا",
+  "Croatia": "كرواتيا",
+  "Cyprus": "قبرص",
+  "Czech Republic": "جمهورية التشيك",
+  "Denmark": "الدنمارك",
+  "Egypt": "مصر",
+  "Estonia": "إستونيا",
+  "Finland": "فنلندا",
+  "Georgia": "جورجيا",
+  "Greece": "اليونان",
+  "Hungary": "المجر",
+  "Iceland": "أيسلندا",
+  "India": "الهند",
+  "Indonesia": "إندونيسيا",
+  "Iran": "إيران",
+  "Iraq": "العراق",
+  "Ireland": "أيرلندا",
+  "Israel": "إسرائيل",
+  "Italy": "إيطاليا",
+  "Jordan": "الأردن",
+  "Kazakhstan": "كازاخستان",
+  "Kuwait": "الكويت",
+  "Lebanon": "لبنان",
+  "Libya": "ليبيا",
+  "Luxembourg": "لوكسمبورغ",
+  "Malaysia": "ماليزيا",
+  "Maldives": "مالديف",
+  "Malta": "مالطا",
+  "Mexico": "المكسيك",
+  "Monaco": "موناكو",
+  "Morocco": "المغرب",
+  "Netherlands": "هولندا",
+  "New Zealand": "نيوزيلندا",
+  "Nigeria": "نيجيريا",
+  "Norway": "النرويج",
+  "Oman": "عمان",
+  "Pakistan": "باكستان",
+  "Palestine": "فلسطين",
+  "Philippines": "الفلبين",
+  "Poland": "بولندا",
+  "Portugal": "البرتغال",
+  "Qatar": "قطر",
+  "Romania": "رومانيا",
+  "Russia": "روسيا",
+  "Saudi Arabia": "المملكة العربية السعودية",
+  "Serbia": "صربيا",
+  "Slovakia": "سلوفاكيا",
+  "Slovenia": "سلوفينيا",
+  "Somalia": "الصومال",
+  "South Africa": "جنوب أفريقيا",
+  "South Korea": "كوريا الجنوبية",
+  "Spain": "إسبانيا",
+  "Sudan": "السودان",
+  "Sweden": "السويد",
+  "Switzerland": "سويسرا",
+  "Syria": "سوريا",
+  "Thailand": "تايلاند",
+  "Tunisia": "تونس",
+  "Turkey": "تركيا",
+  "United Arab Emirates": "الإمارات العربية المتحدة",
+  "United Kingdom": "المملكة المتحدة",
+  "United States": "الولايات المتحدة الأمريكية",
+  "Yemen": "اليمن",
+  "Zambia": "زامبيا",
+  "Zimbabwe": "زيمبابوي",
+  "Reports": "التقارير",
+  "Add tags (press Enter)": "إضافة علامات (اضغط Enter)",
+  "Enter video URL (YouTube)": "أدخل رابط الفيديو (يوتيوب)",
+  "Event Video Thumbnail": "صورة مصغرة للفيديو",
+  "Cast": "طاقم العمل"
 }
