feat: Add History Management Component with CRUD functionality
- Implemented HistoryList component for managing company history events.
- Integrated CreateOrEditHistory modal for adding and editing events.
- Added delete confirmation modal for event deletion.
- Implemented pagination and search functionality for event listing.
- Enhanced UI with responsive design and improved user experience.

feat: Create Events Video Page

- Developed EventsVideoPage component to display video details.
- Integrated video comments section and similar content display.
- Added loading state while fetching video data.

feat: Add EditableField Component for Profile

- Created EditableField component for inline editing of profile fields.
- Implemented save and cancel functionality for edits.

feat: Add Labeled and Stat Components for Profile

- Developed Labeled component for displaying labeled information.
- Created Stat component for displaying simple statistics.

feat: Implement EventCard Component for Event Display

- Implemented EventCard component to display event details.
- Added functionality to navigate to event details or open video modal.

feat: Create MyListContent Component for User's Saved Videos

- Developed MyListContent component to display user's saved videos.
- Implemented load more functionality for pagination.
- Added empty state handling for no saved videos.

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -1017,10 +1017,27 @@
   "Add to Playlist": "إضافة إلى قائمة التشغيل",
   "Remove from Playlist": "إزالة من قائمة التشغيل",
   "Select Sections": "إختر قسما",
-  "A user with this email already exists.": "",
-  "Email is required.": "",
-  "A user with this username already exists.": "",
-  "Username or Email": "",
+  "A user with this email already exists.": " يوجد مستخدم بهذا البريد الإلكتروني بالفعل.",
+  "Email is required.": "البريد الإلكتروني مطلوب.",
+  "A user with this username already exists.": "يوجد مستخدم بهذا اسم المستخدم بالفعل.",
+  "Username or Email": "اسم المستخدم أو البريد الإلكتروني",
+  "Delete image": "حذف الصورة",
+  "Add image": "إضافة صورة",
+  "reports": "التقارير",
+  "full_video": "فيديو كامل",
+  "unit_video": "فيديو وحدة",
+  "Weekly Posts": "المشاركات الأسبوعية",
+  "This Week's Guided Reading": "قراءة موجهة لهذا الأسبوع",
+  "Not found.": "غير موجود.",
+  "DETAIL:": "تفاصيل:",
+  "Friend request sent successfully": "تم إرسال طلب الصداقة بنجاح",
+  "No information provided": "لا توجد معلومات مقدمة",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
   "": "",
   "": "",
   "": "",
