--- a/frontend/src/i18n/locales/en/translation.json
+++ b/frontend/src/i18n/locales/en/translation.json
@@ -791,5 +791,8 @@
   "Load more": "Load more",
   "Ooops...": "Ooops...",
   "Sorry, the content you're looking for doesn't exist.": "Sorry, the content you're looking for doesn't exist.",
-  "Either it was removed, or you mistyped the link.": "Either it was removed, or you mistyped the link."
+  "Either it was removed, or you mistyped the link.": "Either it was removed, or you mistyped the link.",
+  "full_video": "Full video",
+  "unit_video": "Unit Video",
+  "": ""
 }
