feat: Add API functions for dashboard and home data retrieval
- Implemented GetStatistics function in dashboard.js to fetch top statistics.
- Created HomeData function in home.js to retrieve top liked combined data.
- Added Band component for layout with customizable tone.
- Developed HeadingBlock component for displaying titles, descriptions, and call-to-action links.

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -1032,14 +1032,34 @@
   "DETAIL:": "تفاصيل:",
   "Friend request sent successfully": "تم إرسال طلب الصداقة بنجاح",
   "No information provided": "لا توجد معلومات مقدمة",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
+  "Removed from your list": "تمت إزالته من قائمتك",
+  "Remove from My List": "إزالة من قائمتي",
+  "Watch this week's featured videos — stories, reports, and highlights captured in motion.": "شاهد مقاطع الفيديو المميزة لهذا الأسبوع - القصص والتقارير والملخصات الملتقطة في الحركة.",
+  "This Week's Unit Videos": "فيديوهات الوحدة لهذا الأسبوع",
+  "This Week's Full Videos": "فيديوهات كاملة لهذا الأسبوع",
+  "Dive into this week's guided readings — inspiring stories, thoughtful articles, and meaningful reflections curated for you.": "استمتع بقراءات هذا الأسبوع الموجهة - قصص ملهمة، مقالات مدروسة، وتأملات ذات مغزى تم تنسيقها من أجلك.",
+  "Stay updated with this week's top moments, from community gatherings to global highlights.": "ابق على اطلاع بأهم لحظات هذا الأسبوع، من التجمعات المجتمعية إلى أبرز الأحداث العالمية.",
+  "— curated for you": "— تم تنسيقها من أجلك",
+  "— watch now": "— شاهد الآن",
+  "— captured weekly": "— تم التقاطها أسبوعياً",
+  "— Events weekly": "— فعاليات أسبوعية",
+  "— Cards & Photos weekly": "— بطاقات وصور أسبوعية",
+  "— Readings for you": "— قراءات من أجلك",
+  "This Weekly Card": "بطاقة هذا الأسبوع",
+  "Most Liked events": "أكثر الفعاليات إعجاباً",
+  "Suggestions you might like": "اقتراحات قد تعجبك",
+  "Newly Added": "تمت الإضافة حديثاً",
+  "Browse Now": "تصفح الآن",
+  "Added to your list": "تمت إضافته إلى قائمتك",
+  "Website Statistics": "إحصائيات الموقع",
+  "The Section": "القسم",
+  "Action": "الإجراء",
+  "Writer/Cast": "الكاتب/الطاقم",
+  "Comment Count": "عدد التعليقات",
+  "Likes Count": "عدد الإعجابات",
+  "This Week's Event": "فعالية هذا الأسبوع",
+  "Watch this week's events and stay up-to-date on the most important happenings": "شاهد فعاليات هذا الأسبوع، وأبقى على إطلاع على أهم الأحداث.",
+  "This Week's Full Video": "فيديو كامل لهذا الأسبوع",
   "": "",
   "": "",
   "": "",
