feat: Implement CommentsSection component for video and post interactions
- Added CommentsSection component to handle comments for videos and posts.
- Updated UserSwitcher to support RTL layout based on language.
- Modified Sidebar component for improved styling and layout.
- Enhanced Dashboard and GuidedReading pages to support RTL direction.
- Updated translations for Arabic locale.
- Refactored existing comment handling in CardDetails and VideoPage components.
- Introduced new animations for collapsible elements in Tailwind CSS configuration.

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -1060,9 +1060,9 @@
   "This Week's Event": "فعالية هذا الأسبوع",
   "Watch this week's events and stay up-to-date on the most important happenings": "شاهد فعاليات هذا الأسبوع، وأبقى على إطلاع على أهم الأحداث.",
   "This Week's Full Video": "فيديو كامل لهذا الأسبوع",
-  "": "",
-  "": "",
-  "": "",
+  "Similar Content": "محتوى مشابه",
+  "Comment added successfully": "تمت إضافة التعليق بنجاح",
+  "Unfollowed successfully": "تمت إلغاء المتابعة بنجاح",
   "": "",
   "": ""
 }
