feat: Add Series and Seasons Management
- Implemented Series and Seasons management functionality in the dashboard.
- Created SeriesAndSeasonsList component for displaying and managing video series and their seasons.
- Added CreateOrEditSeries and CreateOrEditSeason components for creating and editing series and seasons.
- Integrated delete confirmation modals for series and seasons.
- Updated translations for new features.
- Refactored VideoFilter component to use consistent content type identifiers.
- Enhanced AutoComplete component to handle missing profile images.
- Removed unused MultiSelect component documentation.
- Cleaned up AdminNavbar and Sidebar components for better readability.

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -658,7 +658,7 @@
   "Admin Sign In": "تسجيل دخول المسؤول",
   "User Login": "تسجيل دخول المستخدم",
   "Admin Login": "تسجيل دخول المسؤول",
-  "Logout Account": "تسجيل خروج الحساب",
+  "Logout Account": "تسجيل الخروج  ",
   "Card saved successfully!": "تم حفظ البطاقة بنجاح!",
   "Search Historical Events": "البحث في الأحداث التاريخية...",
   "Max size: 5MB. Supported formats: JPG, PNG, GIF, WebP": "الحجم الأقصى: 5 ميجابايت. الصيغ المدعومة: JPG، PNG، GIF، WebP",
@@ -1063,6 +1063,38 @@
   "Similar Content": "محتوى مشابه",
   "Comment added successfully": "تمت إضافة التعليق بنجاح",
   "Unfollowed successfully": "تمت إلغاء المتابعة بنجاح",
+  "Videos Series & Seasons": "سلاسل وأجزاء الفيديو",
+  "Manage your video series and their seasons": "إدارة سلاسل الفيديو وأجزائها",
+  "Add New Series": "إضافة سلسلة جديدة",
+  "Search by series name...": "البحث حسب اسم السلسلة...",
+  "Series Name": "اسم السلسلة",
+  "Series & Seasons": "السلاسل والأجزاء",
+  "Please enter season number": "يرجى إدخال رقم الموسم",
+  "Series not found": "السلسلة غير موجودة",
+  "Season updated successfully": "تم تحديث الموسم بنجاح",
+  "Season created successfully": "تم إنشاء الموسم بنجاح",
+  "Season Number": "رقم الموسم",
+  "Enter season number (e.g., 1, 2, 3...)": "أدخل رقم الموسم (مثل: 1، 2، 3...)",
+  "Unknown Series": "سلسلة غير معروفة",
+  "Series": "السلسلة",
+  "Update": "تحديث",
+  "Create": "إنشاء",
+  "Enter series name": "أدخل اسم السلسلة",
+  "Please enter series name": "يرجى إدخال اسم السلسلة",
+  "Series updated successfully": "تم تحديث السلسلة بنجاح",
+  "Series created successfully": "تم إنشاء السلسلة بنجاح",
+  "No series found": "لم يتم العثور على سلسلة",
+  "Try adjusting your search": "حاول تعديل بحثك",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
   "": "",
   "": ""
 }
