Refactor: Remove unused NewsContent and CardDetailsPageContent components; introduce PostDetailsPageContent and EventContent components
- Deleted NewsContent component from Events/News directory.
- Deleted CardDetailsPageContent component from GuidedReading/CardDetails directory.
- Introduced PostDetailsPageContent component for handling post details with rating and comments functionality.
- Introduced EventContent component to manage event-related content display.
- Updated routing to reflect new component structure.
- Minor adjustments in HomeContent and VideoDetailsContent for consistency.

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -1085,11 +1085,12 @@
   "Series created successfully": "تم إنشاء السلسلة بنجاح",
   "No series found": "لم يتم العثور على سلسلة",
   "Try adjusting your search": "حاول تعديل بحثك",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
+  "Delete Selection": "حذف التحديد",
+  "Episodes": "الحلقات",
+  "User Reviews": "تقييمات المستخدمين",
+  "No episodes available": "لا توجد حلقات متاحة",
+  "There are no episodes for this season yet": "لا توجد حلقات لهذا الموسم بعد",
+  "Rating submitted successfully": "تم تقديم التقييم بنجاح",
   "": "",
   "": "",
   "": "",
