--- a/frontend/src/i18n/locales/en/translation.json
+++ b/frontend/src/i18n/locales/en/translation.json
@@ -794,5 +794,8 @@
   "Either it was removed, or you mistyped the link.": "Either it was removed, or you mistyped the link.",
   "full_video": "Full video",
   "unit_video": "Unit Video",
-  "": ""
+  "Episodes": "Episodes",
+  "User Reviews": "User Reviews",
+  "No episodes available": "No episodes available",
+  "There are no episodes for this season yet": "There are no episodes for this season yet"
 }
