feat: Enhance Profile component with friend requests management; update translations for friend request features; refactor various components for improved structure and readability.

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -59,6 +59,12 @@
   "Are you sure you want to download the PDF file?": "هل أنت متأكد أنك تريد تنزيل ملف PDF؟",
   "Cancel": "إلغاء",
   "Download": "تنزيل",
+  "Friend Requests": "طلبات الصداقة",
+  "Incoming Requests": "الطلبات الواردة",
+  "Sent Requests": "الطلبات المرسلة",
+  "Accept": "قبول",
+  "Reject": "رفض",
+  "Block": "حظر",
   "Show less": "عرض أقل",
   "SHOW MORE": "عرض المزيد",
   "Not available": "غير متوفر",
