--- a/frontend/src/i18n/locales/en/translation.json
+++ b/frontend/src/i18n/locales/en/translation.json
@@ -84,6 +84,12 @@
   "Preview": "Preview",
   "Cancel": "Cancel",
   "Save Changes": "Save Changes",
+  "Friend Requests": "Friend Requests",
+  "Incoming Requests": "Incoming Requests",
+  "Sent Requests": "Sent Requests",
+  "Accept": "Accept",
+  "Reject": "Reject",
+  "Block": "Block",
   "Add Event": "Add Event",
   "Name": "Name",
   "User Name": "User Name",
