feat: Add friend request management functionality; update translations for friend request actions; enhance HistoryList and SeriesAndSeasonsList components for RTL support; clean up AdminIcons component.

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -65,6 +65,8 @@
   "Accept": "قبول",
   "Reject": "رفض",
   "Block": "حظر",
+  "Friend request accepted": "تم قبول طلب الصداقة",
+  "Friend request rejected": "تم رفض طلب الصداقة",
   "Show less": "عرض أقل",
   "SHOW MORE": "عرض المزيد",
   "Not available": "غير متوفر",
@@ -1097,9 +1099,9 @@
   "No episodes available": "لا توجد حلقات متاحة",
   "There are no episodes for this season yet": "لا توجد حلقات لهذا الموسم بعد",
   "Rating submitted successfully": "تم تقديم التقييم بنجاح",
-  "": "",
-  "": "",
-  "": "",
+  "Season & Series Management": "إدارة المواسم والسلاسل",
+  "No comments yet": "لا توجد تعليقات بعد",
+  "ratings": "التقييمات",
   "": "",
   "": "",
   "": "",
