Refactor comments and toast notifications in CommentsSection component; update EventCard layout; modify Modal styles; enhance PostsFilter functionality; improve PostsFilterSction writer filter handling; adjust SearchSecion sort button visibility based on active filters; update UserIcons styling; integrate VideoDuration component in VideoCard; add YouTube Data API key note in configs; expand Arabic translations for image cropping and other features; adjust layout in AboutMemberContent; restructure CardsAndPhotosContent for better layout; remove unused EventContent component; enhance EventsPageContent layout; update PhotoDetailsContent to comment out toast notifications; refactor VideoDetailsContent for image download functionality; improve VideoPageContent to use useParams for video ID; enhance VideosPageContent layout; update allRoutes to reflect new EventPageContent.

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -220,6 +220,21 @@
   "Create New Video": "إنشاء فيديو جديد",
   "Video Thumbnail": "الصورة المصغرة للفيديو",
   "Upload Image": "رفع صورة",
+  "Select Image to Crop": "اختر صورة للقص",
+  "Crop Image": "قص الصورة",
+  "Important": "مهم",
+  "Please select an image with minimum dimensions of 1920x1080 pixels for best quality.": "يرجى اختيار صورة بأبعاد لا تقل عن 1920×1080 بكسل للحصول على أفضل جودة.",
+  "Please select an image with dimensions of at least 1920x1080 pixels for best quality. ": "يرجى اختيار صورة بأبعاد لا تقل عن 1920×1080 بكسل للحصول على أفضل جودة. ",
+  "Supported formats": "الصيغ المدعومة",
+  "Please select a valid image file (PNG, WebP, JPG, JPEG)": "يرجى اختيار ملف صورة صالح (PNG, WebP, JPG, JPEG)",
+  "Image size should not exceed 10MB": "يجب ألا يتجاوز حجم الصورة 10 ميجابايت",
+  "Image will be cropped to 16:9 ratio (1920x1080)": "سيتم قص الصورة بنسبة 16:9 (1920×1080)",
+  "You can zoom and rotate the image before cropping": "يمكنك تكبير وتدوير الصورة قبل القص",
+  "Maximum file size": "الحد الأقصى لحجم الملف",
+  "Zoom": "تكبير/تصغير",
+  "Rotate 90°": "تدوير 90°",
+  "Current rotation": "الدوران الحالي",
+  "Apply Crop": "تطبيق القص",
   "Recommended: 16:9 aspect ratio": "مستحسن: نسبة العرض إلى الارتفاع 16:9",
   "Enter video title": "أدخل عنوان الفيديو",
   "Type": "النوع",
@@ -1102,6 +1117,19 @@
   "Season & Series Management": "إدارة المواسم والسلاسل",
   "No comments yet": "لا توجد تعليقات بعد",
   "ratings": "التقييمات",
+  "photo": "صورة",
+  "reading": "قراءة",
+  "card": "بطاقة",
+  "Select Series": "اختر السلسلة",
+  "Select series first": "يرجى اختيار السلسلة أولاً",
+  "No seasons available": "لا توجد مواسم متاحة",
+  "Select Season": "اختر الموسم",
+  "Please select an image with minimum dimensions of 300x200 pixels for best quality.": "يرجى اختيار صورة بأبعاد لا تقل عن 300x200 بكسل للحصول على أفضل جودة.",
+  "An account has been created and a verification email has been sent to your email address.": "تم إنشاء حساب وتم إرسال بريد إلكتروني للتحقق إلى عنوان بريدك الإلكتروني.",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
   "": "",
   "": "",
   "": "",
