Refactor Events and Videos Components
- Enhanced EventHeroEnhanced to log side event data for debugging.
- Updated EventHeroSlider to handle video types in routing.
- Modified EventsFilter to support multiple writers selection.
- Adjusted EventsFilterSections to handle writer as an array.
- Updated NewsCard to display country and formatted date.
- Removed unnecessary console log from WeeklyMoments.
- Changed VideoFilter placeholders for clarity.
- Deleted unused VideosHeader component and replaced with VideosHero.
- Improved BrokenCarousel to support RTL layout.
- Refined GuidingReadingcard styles for better UX.
- Updated MultiSelect to use translation for placeholder.
- Enhanced SearchSection to specify sorting by name.
- Adjusted TopFiveSectionCard layout for better readability.
- Updated VideoCard to accept a new prop for size adjustments.
- Improved WeekPhotosCard to handle image URLs correctly.
- Enhanced WeeklyMomentsCard to log item data for debugging.
- Updated Arabic translations for consistency.
- Modified AboutUs pages to persist active tabs in localStorage.

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -19,7 +19,7 @@
   "Email": "البريد الإلكتروني",
   "Confirm Password": "تأكيد كلمة المرور",
   "Do you have an account?": "هل لديك حساب؟",
-  "Sort by": "ترتيب حسب",
+  "Sort by Name": "ترتيب حسب الاسم",
   "Are you sure you want to send the data?": "هل أنت متأكد أنك تريد إرسال البيانات؟",
   "Cacel": "إلغاء",
   "Comment": "تعليق",
@@ -1126,11 +1126,11 @@
   "Select Season": "اختر الموسم",
   "Please select an image with minimum dimensions of 300x200 pixels for best quality.": "يرجى اختيار صورة بأبعاد لا تقل عن 300x200 بكسل للحصول على أفضل جودة.",
   "An account has been created and a verification email has been sent to your email address.": "تم إنشاء حساب وتم إرسال بريد إلكتروني للتحقق إلى عنوان بريدك الإلكتروني.",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
+  "This Week's Weekly Posts": "منشورات هذا الأسبوع",
+  "This Week's Top Liked Cards": "أكثر بطاقات هذا الأسبوع إعجاباً",
+  "Search...": "بحث...",
+  "Select items...": "اختر العناصر...",
+  "Your account is not confirmed, please check your email": "حسابك غير مؤكد، يرجى التحقق من بريدك الإلكتروني.",
   "": "",
   "": "",
   "": ""
