feat: Enhance Guided Reading and Videos pages with new sections and IDs
fix: Correct import path for Dashboard component

feat: Add image conversion utility for HEIC to JPEG format

feat: Implement social media links API with CRUD operations

feat: Create Social Media Management component with add/edit/delete functionality

feat: Add Sort Section functionality for dashboard sections

feat: Develop Dashboard content with dynamic section rendering and state management

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -1164,5 +1164,31 @@
   "Top 5 in your like": "أفضل 5 في إعجابك",
   "Search items, collections...": "بحث عن العناصر والمجموعات...",
   "My List": "قائمتي",
-  "My Saved Videos": "فيديوهاتي المحفوظة"
+  "My Saved Videos": "فيديوهاتي المحفوظة",
+  "Manage Event Sections": "إدارة أقسام الأحداث",
+  "Drag and drop to reorder event sections": "اسحب وأفلت لإعادة ترتيب أقسام الأحداث",
+  "No sections available": "لا توجد أقسام متاحة",
+  "Section Name": "اسم القسم",
+  "Item Name": "اسم العنصر",
+  "Move": "تحريك",
+  "Sections reordered successfully": "تم إعادة ترتيب الأقسام بنجاح",
+  "Drag sections to reorder them": "اسحب الأقسام لإعادة ترتيبها",
+  "video": "قسم الفيديوهات",
+  "post_reading": "قسم القراءة",
+  "post_card": "قسم البطاقات",
+  "post_photo": "قسم الصور",
+  "event": "قسم الأحداث",
+  "Week's Topic": "موضوع الأسبوع",
+  "Project Guide to Excellence": "دليل مشروع التميز",
+  "Janet & Victor Great Love Radio": "راديو جانيت وفيكتور للحب العظيم",
+  "Others Sessions": "جلسات أخرى",
+  "Good effects": "تأثيرات جيدة",
+  "Week's Photos": "صور الأسبوع",
+  "Needlework connects love": "التطريز يربط الحب",
+  "DAAI TV": "تلفزيون دا آي",
+  "Community Area": "منطقة المجتمع",
+  "Team Function": "وظيفة الفريق",
+  "Special book for ten years": "كتاب خاص بعشر سنوات",
+  "Converting HEIC image...": "جاري تحويل صورة HEIC...",
+  "Failed to process image": "فشل معالجة الصورة"
 }
