--- a/frontend/src/i18n/locales/en/translation.json
+++ b/frontend/src/i18n/locales/en/translation.json
@@ -367,6 +367,17 @@
   "Home": "Home",
   "Connect": "Connect",
   "About Us": "About Us",
+  "Week's Topic": "Week's Topic",
+  "Project Guide to Excellence": "Project Guide to Excellence",
+  "Janet & Victor Great Love Radio": "Janet & Victor Great Love Radio",
+  "Others Sessions": "Others Sessions",
+  "Good effects": "Good effects",
+  "Week's Photos": "Week's Photos",
+  "Needlework connects love": "Needlework connects love",
+  "DAAI TV": "DAAI TV",
+  "Community Area": "Community Area",
+  "Team Function": "Team Function",
+  "Special book for ten years": "Special book for ten years",
   "Open main menu": "Open main menu",
   "Navigation": "Navigation",
   "Quick Access": "Quick Access",
@@ -1164,5 +1175,15 @@
   "Humanitarian": "Humanitarian",
   "Relief": "Relief",
   "Photography": "Photography",
-  "Educational": "Educational"
+  "Educational": "Educational",
+  "Manage Event Sections": "Manage Event Sections",
+  "Drag and drop to reorder event sections": "Drag and drop to reorder event sections",
+  "No sections available": "No sections available",
+  "Section Name": "Section Name",
+  "Item Name": "Item Name",
+  "Move": "Move",
+  "Sections reordered successfully": "Sections reordered successfully",
+  "Drag sections to reorder them": "Drag sections to reorder them",
+  "Converting HEIC image...": "Converting HEIC image...",
+  "Failed to process image": "Failed to process image"
 }
