--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -1190,5 +1190,6 @@
   "Team Function": "وظيفة الفريق",
   "Special book for ten years": "كتاب خاص بعشر سنوات",
   "Converting HEIC image...": "جاري تحويل صورة HEIC...",
-  "Failed to process image": "فشل معالجة الصورة"
+  "Failed to process image": "فشل معالجة الصورة",
+  "-------------------------------------------------------------": "-------------------------------------------------------------"
 }
