--- a/frontend/src/i18n/locales/ch/translation.json
+++ b/frontend/src/i18n/locales/ch/translation.json
@@ -1163,5 +1163,31 @@
   "Photography": "攝影",
   "Educational": "教育",
   "views": "觀看次數",
-  "Select items...": "選擇項目..."
+  "Select items...": "選擇項目...",
+  "Manage Event Sections": "管理事件部分",
+  "Drag and drop to reorder event sections": "拖放以重新排序事件部分",
+  "No sections available": "沒有可用的部分",
+  "Section Name": "部分名稱",
+  "Item Name": "項目名稱",
+  "Move": "移動",
+  "Sections reordered successfully": "已成功重新排序部分",
+  "Drag sections to reorder them": "拖動部分以重新排序",
+  "video": "視頻部分",
+  "post_reading": "閱讀部分",
+  "post_card": "卡片部分",
+  "post_photo": "圖片部分",
+  "event": "事件部分",
+  "Week's Topic": "本週主題",
+  "Project Guide to Excellence": "卓越項目指南",
+  "Janet & Victor Great Love Radio": "珍妮特與維克多偉大的愛之廣播",
+  "Others Sessions": "其他會議",
+  "Good effects": "好的效果",
+  "Week's Photos": "本週照片",
+  "Needlework connects love": "刺繡連結愛",
+  "DAAI TV": "DAAI電視",
+  "Community Area": "社區區域",
+  "Team Function": "團隊功能",
+  "Special book for ten years": "特別的十年書籍",
+  "Converting HEIC image...": "正在轉換 HEIC 圖像...",
+  "Failed to process image": "處理圖像失敗"
 }
