--- a/frontend/src/i18n/locales/jp/translation.json
+++ b/frontend/src/i18n/locales/jp/translation.json
@@ -1161,5 +1161,33 @@
   "Top 5 in your like": "あなたのいいねのトップ5",
   "Search items, collections...": "アイテム、コレクションを検索...",
   "My List": "マイリスト",
-  "My Saved Videos": "保存した動画"
+  "My Saved Videos": "保存した動画",
+  "Manage Event Sections": "イベントセクションの管理",
+  "Drag and drop to reorder event sections": "ドラッグアンドドロップでイベントセクションの順序を変更",
+  "No sections available": "利用可能なセクションはありません",
+  "Section Name": "セクション名",
+  "Item Name": "アイテム名",
+  "Move": "移動",
+  "Sections reordered successfully": "セクションが正常に再配置されました",
+  "Drag sections to reorder them": "セクションをドラッグして順序を変更します",
+  "video": "動画",
+  "post_reading": "読書",
+  "post_card": "カード",
+  "post_photo": "写真",
+  "event": "イベント",
+  "Week's Topic": "今週のトピック",
+  "Project Guide to Excellence": "プロジェクト優秀ガイド",
+  "Janet & Victor Great Love Radio": "ジャネット＆ビクター偉大なる愛のラジオ",
+  "Others Sessions": "その他のセッション",
+  "Good effects": "良い効果",
+  "Week's Photos": "今週の写真",
+  "Needlework connects love": "刺繍は愛をつなぐ",
+  "DAAI TV": "DAAI TV",
+  "Community Area": "コミュニティエリア",
+  "Team Function": "チーム機能",
+  "Special book for ten years": "特別な10周年記念本",
+  "Converting HEIC image...": "HEIC画像を変換中...",
+  "Failed to process image": "画像の処理に失敗しました",
+  "Your account is not confirmed, please check your email": "アカウントが確認されていません。メールを確認してください。",
+  "Add Watchlist": "ウォッチリストに追加"
 }
