--- a/frontend/src/i18n/locales/tr/translation.json
+++ b/frontend/src/i18n/locales/tr/translation.json
@@ -686,12 +686,10 @@
   "Pick Happened Date": "Gerçekleşme tarihini seç",
   "verify": "Doğrula",
   "Incorrect Username Or Password": "Kullanıcı adı veya şifre hatalı",
-
   "Sections": "Bölümler",
   "Add a comment...": "Yorum ekle...",
   "Events List": "Etkinlik Listesi",
   "Add/Edit Event": "Etkinlik Ekle/Düzenle",
-
   "Changes ready to save. Click 'Update Profile' to save all changes.": "Değişiklikler kaydetmeye hazır. Tüm değişiklikleri kaydetmek için 'Profili Güncelle'ye tıklayın.",
   "Enter current password": "Mevcut şifreyi girin",
   "Enter new password": "Yeni şifreyi girin",
@@ -1165,5 +1163,32 @@
   "Top 5 in your like": "Beğenilerinizdeki En İyi 5",
   "Search items, collections...": "Öğeleri, koleksiyonları ara...",
   "My List": "Listem",
-  "My Saved Videos": "Kaydedilen Videolarım"
+  "My Saved Videos": "Kaydedilen Videolarım",
+  "Manage Event Sections": "Etkinlik Bölümlerini Yönet",
+  "Drag and drop to reorder event sections": "Etkinlik bölümlerinin sırasını değiştirmek için sürükleyip bırakın",
+  "No sections available": "Kullanılabilir bölüm yok",
+  "Section Name": "Bölüm Adı",
+  "Item Name": "Öğe Adı",
+  "Move": "Taşı",
+  "Sections reordered successfully": "Bölümler başarıyla yeniden sıralandı",
+  "Drag sections to reorder them": "Bölümleri yeniden sıralamak için sürükleyin",
+  "video": "video",
+  "post_reading": "okuma",
+  "post_card": "kart",
+  "post_photo": "fotoğraf",
+  "event": "etkinlik",
+  "Week's Topic": "Bu Haftanın Konusu",
+  "Project Guide to Excellence": "Mükemmellik Proje Rehberi",
+  "Janet & Victor Great Love Radio": "Janet & Victor Büyük Aşk Radyosu",
+  "Others Sessions": "Diğer Oturumlar",
+  "Good effects": "İyi etkiler",
+  "Week's Photos": "Bu Haftanın Fotoğrafları",
+  "Needlework connects love": "İğne işi sevgiyi birleştirir",
+  "DAAI TV": "DAAI TV",
+  "Community Area": "Topluluk Alanı",
+  "Team Function": "Takım Fonksiyonu",
+  "Special book for ten years": "Özel 10. Yıl Kitabı",
+  "Converting HEIC image...": "HEIC görüntü dönüştürülüyor...",
+  "Failed to process image": "Görüntü işlenemedi",
+  "Your account is not confirmed, please check your email": "Hesabınız onaylanmadı, lütfen e-postanızı kontrol edin."
 }
