--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -1191,5 +1191,39 @@
   "Special book for ten years": "كتاب خاص بعشر سنوات",
   "Converting HEIC image...": "جاري تحويل صورة HEIC...",
   "Failed to process image": "فشل معالجة الصورة",
-  "-------------------------------------------------------------": "-------------------------------------------------------------"
+  "-------------------------------------------------------------": "-------------------------------------------------------------",
+  "Manage Social Media": "إدارة وسائل التواصل الاجتماعي",
+  "Add, edit, and remove social media links for your organization": "إضافة وتحرير وإزالة روابط وسائل التواصل الاجتماعي لمنظمتك",
+  "Add New Social Link": "إضافة رابط اجتماعي جديد",
+  "Platform": "المنصة",
+  "Select a platform": "اختر المنصة",
+  "URL": "الرابط",
+  "Add Social Link": "إضافة رابط اجتماعي",
+  "link": "الروابط",
+  "No social links added yet": "لم تتم إضافة روابط اجتماعية بعد",
+  "Click the button above to add your first social media link": "انقر على الزر أعلاه لإضافة رابط وسائل التواصل الاجتماعي الأول الخاص بك",
+  "Please fill all fields": "يرجى ملء جميع الحقول",
+  "Invalid URL format": "تنسيق الرابط غير صالح",
+  "Failed to add social link": "فشل في إضافة الرابط الاجتماعي",
+  "Social link added successfully": "تمت إضافة الرابط الاجتماعي بنجاح",
+  "Social link updated successfully": "تم تحديث الرابط الاجتماعي بنجاح",
+  "Delete Social Link": "حذف الرابط الاجتماعي",
+  "Are you sure you want to delete this social media link?": "هل أنت متأكد أنك تريد حذف هذا الرابط الاجتماعي؟",
+  "Social link deleted successfully": "تم حذف الرابط الاجتماعي بنجاح",
+  "Sort Section": "قسم الترتيب",
+  "Profile Settings": "إعدادات الملف الشخصي",
+  "Project Manager": "مدير المشروع",
+  "123 Main St, City, State": "الشارع الرئيسي، المدينة، الولاية 123",
+  "Instagram": "إنستغرام",
+  "Facebook": "فيسبوك",
+  "Twitter": "تويتر",
+  "LinkedIn": "لينكد إن",
+  "TikTok": "تيك توك",
+  "YouTube": "يوتيوب",
+  "Snapchat": "سناب شات",
+  "Pinterest": "بينتيريست",
+  "Reddit": "ريديت",
+  "WhatsApp": "واتساب",
+  "Manage Sections": "إدارة الأقسام",
+  "Drag and drop to reorder sections": "اسحب وأفلت لإعادة ترتيب الأقسام"
 }
