--- a/frontend/src/i18n/locales/tr/translation.json
+++ b/frontend/src/i18n/locales/tr/translation.json
@@ -158,7 +158,6 @@
   "e.g., 1h 28min or 15:30": "örn. 1s 28dk veya 15:30",
   "YouTube URL": "YouTube URL’si",
   "Featured Video": "Öne Çıkan Video",
-  "Mark as New": "Yeni Olarak İşaretle",
   "Update Video": "Videoyu Güncelle",
   "Create Video": "Video Oluştur",
   "This action cannot be undone. This will permanently delete the selected item.": "Bu işlem geri alınamaz. Seçilen öğe kalıcı olarak silinecektir.",
@@ -1190,5 +1189,47 @@
   "Special book for ten years": "Özel 10. Yıl Kitabı",
   "Converting HEIC image...": "HEIC görüntü dönüştürülüyor...",
   "Failed to process image": "Görüntü işlenemedi",
-  "Your account is not confirmed, please check your email": "Hesabınız onaylanmadı, lütfen e-postanızı kontrol edin."
+  "Your account is not confirmed, please check your email": "Hesabınız onaylanmadı, lütfen e-postanızı kontrol edin.",
+  "Manage Social Media": "إدارة وسائل التواصل الاجتماعي",
+  "Add, edit, and remove social media links for your organization": "إضافة وتحرير وإزالة روابط وسائل التواصل الاجتماعي لمنظمتك",
+  "Add New Social Link": "إضافة رابط اجتماعي جديد",
+  "Platform": "المنصة",
+  "Select a platform": "اختر المنصة",
+  "URL": "الرابط",
+  "Add Social Link": "إضافة رابط اجتماعي",
+  "link": "الروابط",
+  "No social links added yet": "لم تتم إضافة روابط اجتماعية بعد",
+  "Click the button above to add your first social media link": "انقر على الزر أعلاه لإضافة رابط وسائل التواصل الاجتماعي الأول الخاص بك",
+  "Please fill all fields": "يرجى ملء جميع الحقول",
+  "Invalid URL format": "تنسيق الرابط غير صالح",
+  "Failed to add social link": "فشل في إضافة الرابط الاجتماعي",
+  "Social link added successfully": "تمت إضافة الرابط الاجتماعي بنجاح",
+  "Social link updated successfully": "تم تحديث الرابط الاجتماعي بنجاح",
+  "Delete Social Link": "حذف الرابط الاجتماعي",
+  "Are you sure you want to delete this social media link?": "هل أنت متأكد أنك تريد حذف هذا الرابط الاجتماعي؟",
+  "Social link deleted successfully": "تم حذف الرابط الاجتماعي بنجاح",
+  "Sort Section": "قسم الترتيب",
+  "Profile Settings": "إعدادات الملف الشخصي",
+  "Project Manager": "مدير المشروع",
+  "123 Main St, City, State": "الشارع الرئيسي، المدينة، الولاية 123",
+  "Instagram": "إنستغرام",
+  "Facebook": "فيسبوك",
+  "Twitter": "تويتر",
+  "LinkedIn": "لينكد إن",
+  "TikTok": "تيك توك",
+  "YouTube": "يوتيوب",
+  "Snapchat": "سناب شات",
+  "Pinterest": "بينتيريست",
+  "Reddit": "ريديت",
+  "WhatsApp": "واتساب",
+  "Manage Sections": "إدارة الأقسام",
+  "Drag and drop to reorder sections": "اسحب وأفلت لإعادة ترتيب الأقسام",
+  "Add/Edit Video": "إضافة/تعديل فيديو",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": ""
 }
